--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -2,8 +2,527 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1afc4376-3cf6-45af-8da5-69e2bc127f0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "import re\n",
+    "import httpx\n",
+    "import os\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv())\n",
+    "from openai import OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b03dd501-dd18-47ad-9909-b0a96e3b26de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = OpenAI(api_key=)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4d373c7f-8c20-46ec-a790-3d514cfddee5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_completion = client.chat.completions.create(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[{\"role\": \"user\", \"content\": \"Hello world\"}]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4a0ee87c-0d78-4a17-84a0-9be1a26b59d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello! How can I assist you today?'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_completion.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d0e786b1-82e2-4a64-9b5c-bd755fd5d04a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Agent:\n",
+    "    def __init__(self, system=\"\"):\n",
+    "        self.system = system\n",
+    "        self.messages = []\n",
+    "        if self.system:\n",
+    "            self.messages.append({\"role\": \"system\", \"content\": system})\n",
+    "\n",
+    "    def __call__(self, message):\n",
+    "        self.messages.append({\"role\": \"user\", \"content\": message})\n",
+    "        result = self.execute()\n",
+    "        self.messages.append({\"role\": \"assistant\", \"content\": result})\n",
+    "        return result\n",
+    "\n",
+    "    def execute(self):\n",
+    "        completion = client.chat.completions.create(\n",
+    "                        model=\"gpt-4o\", \n",
+    "                        temperature=0,\n",
+    "                        messages=self.messages)\n",
+    "        return completion.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9097dfbd-874f-4391-b809-468ffe96c591",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"\"\"\n",
+    "You run in a loop of Thought, Action, PAUSE, Observation.\n",
+    "At the end of the loop you output an Answer\n",
+    "Use Thought to describe your thoughts about the question you have been asked.\n",
+    "Use Action to run one of the actions available to you - then return PAUSE.\n",
+    "Observation will be the result of running those actions.\n",
+    "\n",
+    "Your available actions are:\n",
+    "\n",
+    "calculate:\n",
+    "e.g. calculate: 4 * 7 / 3\n",
+    "Runs a calculation and returns the number - uses Python so be sure to use floating point syntax if necessary\n",
+    "\n",
+    "average_dog_weight:\n",
+    "e.g. average_dog_weight: Collie\n",
+    "returns average weight of a dog when given the breed\n",
+    "\n",
+    "Example session:\n",
+    "\n",
+    "Question: How much does a Bulldog weigh?\n",
+    "Thought: I should look the dogs weight using average_dog_weight\n",
+    "Action: average_dog_weight: Bulldog\n",
+    "PAUSE\n",
+    "\n",
+    "You will be called again with this:\n",
+    "\n",
+    "Observation: A Bulldog weights 51 lbs\n",
+    "\n",
+    "You then output:\n",
+    "\n",
+    "Answer: A bulldog weights 51 lbs\n",
+    "\"\"\".strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a50c1db1-e028-443e-b26c-3786f26f9ad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate(what):\n",
+    "    return eval(what)\n",
+    "\n",
+    "def average_dog_weight(name):\n",
+    "    if name in \"Scottish Terrier\": \n",
+    "        return(\"Scottish Terriers average 20 lbs\")\n",
+    "    elif name in \"Border Collie\":\n",
+    "        return(\"a Border Collies average weight is 37 lbs\")\n",
+    "    elif name in \"Toy Poodle\":\n",
+    "        return(\"a toy poodles average weight is 7 lbs\")\n",
+    "    else:\n",
+    "        return(\"An average dog weights 50 lbs\")\n",
+    "\n",
+    "known_actions = {\n",
+    "    \"calculate\": calculate,\n",
+    "    \"average_dog_weight\": average_dog_weight\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "89bd77c5-eb3c-4839-8f45-6e4d282fa3d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abot = Agent(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "07639fb9-dff5-466a-98c5-2e3ba9aa61f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thought: I should look up the average weight of a Toy Poodle using the average_dog_weight action.\n",
+      "Action: average_dog_weight: Toy Poodle\n",
+      "PAUSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = abot(\"How much does a toy poodle weigh?\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "43523515-0baa-43c0-b979-cfc1b080f5a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = average_dog_weight(\"Toy Poodle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d65aa28a-0b76-4863-950c-68c185f3c20c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a toy poodles average weight is 7 lbs'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fdac1475-f548-4191-8c0d-d43de586c61b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next_prompt = \"Observation: {}\".format(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "79a5a96d-80c6-4822-ab53-b52250607bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Answer: A Toy Poodle weighs an average of 7 lbs.'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abot(next_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f7fb76bb-e741-4d43-b8bb-9c08d4a55f72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'system',\n",
+       "  'content': 'You run in a loop of Thought, Action, PAUSE, Observation.\\nAt the end of the loop you output an Answer\\nUse Thought to describe your thoughts about the question you have been asked.\\nUse Action to run one of the actions available to you - then return PAUSE.\\nObservation will be the result of running those actions.\\n\\nYour available actions are:\\n\\ncalculate:\\ne.g. calculate: 4 * 7 / 3\\nRuns a calculation and returns the number - uses Python so be sure to use floating point syntax if necessary\\n\\naverage_dog_weight:\\ne.g. average_dog_weight: Collie\\nreturns average weight of a dog when given the breed\\n\\nExample session:\\n\\nQuestion: How much does a Bulldog weigh?\\nThought: I should look the dogs weight using average_dog_weight\\nAction: average_dog_weight: Bulldog\\nPAUSE\\n\\nYou will be called again with this:\\n\\nObservation: A Bulldog weights 51 lbs\\n\\nYou then output:\\n\\nAnswer: A bulldog weights 51 lbs'},\n",
+       " {'role': 'user', 'content': 'How much does a toy poodle weigh?'},\n",
+       " {'role': 'assistant',\n",
+       "  'content': 'Thought: I should look up the average weight of a Toy Poodle using the average_dog_weight action.\\nAction: average_dog_weight: Toy Poodle\\nPAUSE'},\n",
+       " {'role': 'user',\n",
+       "  'content': 'Observation: a toy poodles average weight is 7 lbs'},\n",
+       " {'role': 'assistant',\n",
+       "  'content': 'Answer: A Toy Poodle weighs an average of 7 lbs.'}]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abot.messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6897247a-a32b-499d-88a0-4d2bafc7bc78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thought: I need to find the average weight of both a Border Collie and a Scottish Terrier, then add them together to find their combined weight.\\nAction: average_dog_weight: Border Collie\\nPAUSE'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"\"\"I have 2 dogs, a border collie and a scottish terrier. \\\n",
+    "What is their combined weight\"\"\"\n",
+    "abot(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "87aee2b0-f4d1-4951-bd92-de8c7e23eb75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observation: a Border Collies average weight is 37 lbs\n"
+     ]
+    }
+   ],
+   "source": [
+    "next_prompt = \"Observation: {}\".format(average_dog_weight(\"Border Collie\"))\n",
+    "print(next_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "93632545-e08d-4476-b44e-d8b5a02e33e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Action: average_dog_weight: Scottish Terrier\\nPAUSE'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abot(next_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "67af9bbe-f8eb-4fad-83bd-fdd7ea7718ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observation: Scottish Terriers average 20 lbs\n"
+     ]
+    }
+   ],
+   "source": [
+    "next_prompt = \"Observation: {}\".format(average_dog_weight(\"Scottish Terrier\"))\n",
+    "print(next_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8672daa5-a0f9-476b-8f96-9f68aef6f0a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thought: Now that I have the average weights of both dogs, I can calculate their combined weight by adding the two values together.\\nAction: calculate: 37 + 20\\nPAUSE'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abot(next_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f4ef4b1c-1297-4463-b62a-305eab812147",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observation: 57\n"
+     ]
+    }
+   ],
+   "source": [
+    "next_prompt = \"Observation: {}\".format(eval(\"37 + 20\"))\n",
+    "print(next_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "bdd819dd-3c20-4a08-b408-dacc8652d090",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Answer: The combined average weight of a Border Collie and a Scottish Terrier is 57 lbs.'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abot(next_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04803438-37de-4390-86b4-ab3fbfaafafd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Adding Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "304b43fb-a2fb-41c5-bb61-bad6b2a162e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "C:\\Users\\shriy\\AppData\\Local\\Temp\\ipykernel_25272\\410847425.py:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "  action_re = re.compile('^Action: (\\w+): (.*)$')\n"
+     ]
+    }
+   ],
+   "source": [
+    "action_re = re.compile('^Action: (\\w+): (.*)$') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "d6ea8624-c97c-4dda-ae8a-655f044dd4f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def query(question, max_turns=5):\n",
+    "    i = 0\n",
+    "    bot = Agent(prompt)\n",
+    "    next_prompt = question\n",
+    "    while i < max_turns:\n",
+    "        i += 1\n",
+    "        result = bot(next_prompt)\n",
+    "        print(result)\n",
+    "        actions = [\n",
+    "            action_re.match(a) \n",
+    "            for a in result.split('\\n') \n",
+    "            if action_re.match(a)\n",
+    "        ]\n",
+    "        if actions:\n",
+    "            # There is an action to run\n",
+    "            action, action_input = actions[0].groups()\n",
+    "            if action not in known_actions:\n",
+    "                raise Exception(\"Unknown action: {}: {}\".format(action, action_input))\n",
+    "            print(\" -- running {} {}\".format(action, action_input))\n",
+    "            observation = known_actions[action](action_input)\n",
+    "            print(\"Observation:\", observation)\n",
+    "            next_prompt = \"Observation: {}\".format(observation)\n",
+    "        else:\n",
+    "            return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "371b703e-d0bc-4920-918c-6bad490a3f12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thought: I need to find the average weight of both a Border Collie and a Scottish Terrier, then add them together to get the combined weight.\n",
+      "Action: average_dog_weight: Border Collie\n",
+      "PAUSE\n",
+      " -- running average_dog_weight Border Collie\n",
+      "Observation: a Border Collies average weight is 37 lbs\n",
+      "Action: average_dog_weight: Scottish Terrier\n",
+      "PAUSE\n",
+      " -- running average_dog_weight Scottish Terrier\n",
+      "Observation: Scottish Terriers average 20 lbs\n",
+      "Thought: Now that I have the average weights of both the Border Collie and the Scottish Terrier, I can calculate their combined weight.\n",
+      "Action: calculate: 37 + 20\n",
+      "PAUSE\n",
+      " -- running calculate 37 + 20\n",
+      "Observation: 57\n",
+      "Answer: The combined average weight of a Border Collie and a Scottish Terrier is 57 lbs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"\"\"I have 2 dogs, a border collie and a scottish terrier. \\\n",
+    "What is their combined weight\"\"\"\n",
+    "query(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b3e8269-6b02-40bc-8238-d7722028e087",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,11 +530,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
